syntax = "proto3";

option go_package = "./pb";

package pb;


//model
message Homestay {
  int64   id = 1;
  string  title = 2;
  float   ratingStars = 3;
  int64 commentCount = 4;
  string titleTags = 5;
  string  bannerUrls = 6;
  int64 latitude = 7;
  int64 longitude = 8;
  string location = 9;
  string facilities = 10;
  string cover = 11;
  string area = 12;
  string roomConfig = 13;
  string cleanVideo = 14;
  int64   homestayBusinessId = 15;   //店铺id
  int64   hostId = 16;               //房东id
  string hostAvatar = 17;
  string hostNickname = 18;
  int64   rowState = 19;             //0:下架 1:上架
  int64   priceBefore = 20;       //民宿价格(分)
  int64   priceAfter = 21;
}

message HomestayComment {
  int64 id = 1;
  int64 homestayId = 2;
  string commentTime = 3;
  string content = 4;
  string star = 5;
  string tidyRating = 6;
  string trafficRating = 7;
  string securityRating = 8;
  string foodRating = 9;
  string costRating = 10;
  int64 userId = 11;
  string nickname = 12;
  string avatar = 13;
  string imageUrls = 14;
  int64 likeCount = 15;
}

//req 、resp
message HomestayDetailReq {
  int64 homestayId = 1;
  int64 userId = 2;
}
message HomestayDetailResp {
  int64 id = 1;
  string title = 2;
  double ratingStars = 3;
  int64 commentCount = 4;
  string titleTags = 5;
  string bannerUrls = 6;
  int64 latitude = 7;
  int64 longitude = 8;
  string facilities = 9;
  string area = 10;
  string roomConfig = 11;
  string cleanVideo = 12;
  string hostAvatar = 13;             // 房东头像
  string hostNickname = 14;             // 房东昵称
  int64 priceBefore = 15;                //民宿价格
  int64 priceAfter = 16;
}

message AddHomestayReq {
  string title = 1;
  string titleTags = 2;
  string bannerUrls = 3;
  int64 latitude = 4;
  int64 longitude = 5;
  string facilities = 6;
  string area = 7;
  string roomConfig = 8;
  string cleanVideo = 9;
  int64 priceBefore = 10;              //民宿价格
  int64 priceAfter = 11;
  int64 hostId = 12;
  string hostAvatar = 13;
  string hostNickname = 14;
}
message AddHomestayResp {
}

message DeleteHomestayReq {
  int64 userId = 1;
  int64 homestayId = 2;
}
message DeleteHomestayResp {
  bool success = 1;
}

message AdminDeleteHomestayReq {
  int64 homestayId = 1;
}
message AdminDeleteHomestayResp {
  bool success = 1;
}

message WishListReq {
  int64 id = 1;
}
message WishListResp {
  repeated Homestay list = 1;
}

message AddWishListReq {
  int64 userId = 1;
  int64 homestayId = 2;
}
message AddWishListResp {
  Homestay homestay = 1;
}

message RemoveWishListReq {
  int64 userId = 1;
  int64 homestayId = 2;
}
message RemoveWishListResp {
  bool success = 1;
}

message AddGuessReq {
  int64 homestayId = 1;
}
message AddGuessResp {
  bool success = 1;
}

message History {
  int64   id = 1;
  string  title = 2;
  string  cover = 3;
  string  intro = 4;
  string  location = 5;
  int64   homestayBusinessId = 6;   //店铺id
  int64   userId = 7;               //房东id
  int64   rowState = 8;             //0:下架 1:上架
  double  ratingStars = 9;
  int64   priceBefore = 10;       //民宿价格(分)
  int64   priceAfter = 11;
  int64   lastBrowsingTime = 12;
}

message HistoryListReq {
  int64 userId = 1;
}
message HistoryListResp {
  repeated History historyList = 1;
}

message RemoveHistoryReq {
  int64 userId = 1;
  int64 historyId = 2;
}
message RemoveHistoryResp {
  bool success = 1;
}

message ClearHistoryReq {
  int64 userId = 1;
}
message ClearHistoryResp {
  bool success = 1;
}

message AddCommentReq {
  HomestayComment homestayComment = 1;
}
message AddCommentResp {
  bool success = 1;
}

message LikeCommentReq {
  int64 commentId = 1;
}
message LikeCommentResp {
  bool success = 1;
}

message SearchByLocationReq {
  string location = 1;
}
message SearchByLocationResp {
  repeated Homestay list = 1;
}

//service
service travel {
  //homestayDetail
  rpc homestayDetail(HomestayDetailReq) returns(HomestayDetailResp);
  rpc addHomestay(AddHomestayReq) returns (AddHomestayResp);
  rpc deleteHomestay(DeleteHomestayReq) returns (DeleteHomestayResp);
  rpc adminDeleteHomestay(AdminDeleteHomestayReq) returns (AdminDeleteHomestayResp);
  rpc addComment(AddCommentReq) returns (AddCommentResp);
  rpc likeComment(LikeCommentReq) returns (LikeCommentResp);
  rpc wishList(WishListReq) returns (WishListResp);
  rpc addWishList(AddWishListReq) returns (AddWishListResp);
  rpc removeWishList(RemoveWishListReq) returns (RemoveWishListResp);
  rpc addGuess(AddGuessReq) returns (AddGuessResp);
  rpc historyList(HistoryListReq) returns (HistoryListResp);
  rpc removeHistory(RemoveHistoryReq) returns (RemoveHistoryResp);
  rpc clearHistory(ClearHistoryReq) returns (ClearHistoryResp);
  rpc searchByLocation(SearchByLocationReq) returns (SearchByLocationResp);
}
